objects/spExams__Question__c.object
<CustomObject>
    <fields>
        <fullName>spExams__Content__c</fullName>
        <label>Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>spExams__No_of_Correct_Answers__c</fullName>
        <label>No of Correct Answers</label>
        <summaryFilterItems>
            <field>spExams__Answer__c.spExams__IsCorrect__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>spExams__Answer__c.spExams__Question__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>spExams__Number_of_Answer__c</fullName>
        <description>Number of answer in a question</description>
        <label>Number of Answer</label>
        <summaryForeignKey>spExams__Answer__c.spExams__Question__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>spExams__Topic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Topic</label>
        <referenceTo>spExams__Topic__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>spExams__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Multiple Choice</fullName>
                </value>
                <value>
                    <fullName>Single Choice</fullName>
                    <default>true</default>
                    <label>Single Choice</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Question</label>
    <listViews>
        <fullName>spExams__All</fullName>
        <columns>NAME</columns>
        <columns>spExams__Content__c</columns>
        <columns>spExams__Topic__c</columns>
        <columns>spExams__Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>spExams__No_of_Correct_Answers__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Q-{0000000}</displayFormat>
        <label>Question No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>